--- a/frontend/vue-project/src/assets/main.css
+++ b/frontend/vue-project/src/assets/main.css
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 :root {
-    --dark-color: #111111;
-    --gray-color: #CCCCCC;
-    --light-color: #F1F1F1;
+    --dark-color: rgba(0,0,0,0.95);
+    --gray-color: rgba(0,0,0,0.20);
+    --dark-gray-color: rgba(0,0,0,0.7);
+    --light-color: rgba(0,0,0,0.05);
 
 }
 
