--- a/frontend/vue-project/src/assets/main.css
+++ b/frontend/vue-project/src/assets/main.css
@@ -1,11 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
 :root {
     --dark-color: rgba(0,0,0,0.95);
     --gray-color: rgba(0,0,0,0.20);
     --dark-gray-color: rgba(0,0,0,0.7);
-    --light-color: rgba(0,0,0,0.05);
-
+    --light-color: rgb(243, 243, 243);
+    --accent-color: rgb(212, 84, 10);
+    --accent-color-dark: rgb(192, 77, 10);
 }
 
 body {
@@ -24,4 +26,18 @@ div {
 
 .emphasis {
     font-weight: bold;
+}
+
+button {
+    font-family: "Roboto", Arial, Helvetica, sans-serif;
+    background-color: var(--accent-color);
+    color: var(--light-color);
+    border-style: none;
+    padding: 0.5em;
+    font-size: 1em;
+    transition: background-color 0.1s;
+}
+
+button:hover {
+    background-color: var(--accent-color-dark);
 }
